dimagi-SalesforceFB/src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Communications__c</fullName>
        <label>Marketing &amp; Communications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Med_Type__c</fullName>
        <label>Medical Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Coverage_Type__c</fullName>
        <label>Medical Plan Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Medical Insurance Member ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Gusto</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Myanmar__c</fullName>
        <label>Myanmar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCI_No__c</fullName>
        <label>OCI No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops__c</fullName>
        <label>Ops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Org_Unit__c</fullName>
        <label>Org Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>DevOps</fullName>
                </value>
                <value>
                    <fullName>Field Manager</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passport_2__c</fullName>
        <label>Passport No 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date_2__c</fullName>
        <label>Passport Expiration Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date__c</fullName>
        <label>Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayPal_User_ID__c</fullName>
        <description>This field is to store employee PayPal User IDs if that is the method of payment Dimagi uses for them</description>
        <inlineHelpText>This field is to store employee PayPal User IDs if that is the method of payment Dimagi uses for them</inlineHelpText>
        <label>PayPal User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Level__c</fullName>
        <label>Pay Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payroll_Frequency__c</fullName>
        <label>Payroll Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payroll_Notes__c</fullName>
        <label>Last Pay Update Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_Plan__c</fullName>
        <label>Pension Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Phone_Number__c</fullName>
        <label>Personal Phone (with Country Code)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Office Phone (with Country Code)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_No__c</fullName>
        <label>Medical Benefit Policy No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Date__c</fullName>
        <label>Position Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <label>Position ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roth_401K_Deduction_or__c</fullName>
        <label>Roth 401K Deduction ($ or %)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001eUPVEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Type__c</fullName>
        <label>SI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Comm</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN_PAN_ID_Number__c</fullName>
        <label>SSN/PAN/ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Annual Salary (local)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Manager__c</fullName>
        <label>Secondary Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Sup__c</fullName>
        <label>Section Sup</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dimagi has electronic copy of employee&apos;s signature on file</description>
        <label>Signature on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Travel_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Travel Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Skills__c</fullName>
        <label>Special Skills</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Tax_Withholding__c</fullName>
        <label>State Tax Withholding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Options__c</fullName>
        <label>Stock Options</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Value_Day_1__c</fullName>
        <label>Stock Value (Day 1)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Unit__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>Mgmt</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Ops</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Emp_ID__c</fullName>
        <label>Supervisor Emp ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swift_Code_IFSC_Code__c</fullName>
        <label>Swift Code/IFSC Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMP_Annual_Local_Salary__c</fullName>
        <description>TEMPORARY FOR OPS During 8/2016 Payroll Transition</description>
        <inlineHelpText>TEMPORARY FOR OPS During 8/2016 Payroll Transition</inlineHelpText>
        <label>TEMP Annual Local Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMP_Pay_Rate_Per_Pay_Period__c</fullName>
        <description>TEMPORARY FOR OPS during 8/2016 pay updates</description>
        <inlineHelpText>TEMPORARY FOR OPS during 8/2016 pay updates</inlineHelpText>
        <label>TEMP Pay Rate Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Address_City__c</fullName>
        <label>Tax Address City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Country__c</fullName>
        <label>Tax Address Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_State__c</fullName>
        <label>Tax Address State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Street__c</fullName>
        <label>Tax Address Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_Zip_Postal_Code__c</fullName>
        <label>Tax Address Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Unit_Time_Split__c</fullName>
        <formula>DWA__c + Myanmar__c + DLAC__c + DMoz__c + DSI__c + INC__c + DSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Unit Time Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Department_Time_Split__c</fullName>
        <formula>Global_Services__c + Data__c + Tech__c + Ops__c + Marketing_Communications__c + BizDev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Department Time Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Stock_Value__c</fullName>
        <formula>Stock_Value_Day_1__c   *   Stock_Options__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_Currency_Per_Pay_period__c</fullName>
        <formula>Pay_Rate__c/Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pay per Period in Local Currency</inlineHelpText>
        <label>USD_Currency_Per_Pay_period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unloaded_Daily_Rate__c</fullName>
        <formula>(Annual_Salary_in_USD__c /260)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Annual Salary USD over 260 working days</inlineHelpText>
        <label>Unloaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VISA_No__c</fullName>
        <label>VISA No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISA_Type__c</fullName>
        <label>VISA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tourist</fullName>
                </value>
                <value>
                    <fullName>Intracompany</fullName>
                </value>
                <value>
                    <fullName>Critical Skills</fullName>
                </value>
                <value>
                    <fullName>OCI</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>F-1/OPT</fullName>
                </value>
                <value>
                    <fullName>H-1B</fullName>
                </value>
                <value>
                    <fullName>L-1A/B</fullName>
                </value>
                <value>
                    <fullName>PERM/GC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacation_Days__c</fullName>
        <label>Vacation Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visa_Expiration_Date__c</fullName>
        <label>Visa Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_ID__c</fullName>
        <label>Voter ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X401K_Payroll_Deduction__c</fullName>
        <label>Traditional 401K Deduction ($ or %)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <label>401K</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearly_Comp__c</fullName>
        <formula>Salary__c  +  Bonus_Potential__c  +  Total_Stock_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Years_of_exp__c</fullName>
        <label>Prior Years of Exp.</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>Contractors</fullName>
        <columns>NAME</columns>
        <columns>Employee_Status__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contractors</label>
    </listViews>
    <listViews>
        <fullName>Employees_by_Language</fullName>
        <columns>NAME</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>Employee_Last_Name__c</columns>
        <columns>Language_1_Proficiency__c</columns>
        <columns>Language_2_Proficiency__c</columns>
        <columns>Language_3_Proficiency__c</columns>
        <columns>Language_4_Proficiency__c</columns>
        <columns>Language_5_Proficiency__c</columns>
        <columns>Language_6_Proficiency__c</columns>
        <columns>Languages_Spoken__c</columns>
        <columns>Language_Spoken_2__c</columns>
        <columns>Language_Spoken_3__c</columns>
        <columns>Language_Spoken_4__c</columns>
        <columns>Language_Spoken_5__c</columns>
        <columns>Language_Spoken_6__c</columns>
        <filterScope>Everything</filterScope>
        <label>Employees by Language</label>
    </listViews>
    <listViews>
        <fullName>FullTimeEmployees</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>SF_User__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full Time Employees</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExchangeRateHistoryValidation</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; (
(ISNULL(Effective_Exchange_Rate_Date__c) &amp;&amp; NOT(ISNULL(Exchange_Rate__c)))))
|| (ISCHANGED(Exchange_Rate__c) &amp;&amp; NOT(ISCHANGED(Effective_Exchange_Rate_Date__c)))</errorConditionFormula>
        <errorMessage>You must update Exchange Rate with Exchange Rate Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalaryHistoryValidation</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; (
(ISNULL(Effective_Salary_Date__c) &amp;&amp; NOT(ISNULL(Salary__c)))))
|| (ISCHANGED(Salary__c) &amp;&amp; NOT(ISCHANGED(Effective_Salary_Date__c)))</errorConditionFormula>
        <errorMessage>You must update Salary with Effective Date</errorMessage>
    </validationRules>
</CustomObject>